Enhanced app to handle long text inputs and fixed various issues: updated IdeaInput to use textarea, fixed ClarificationModal to handle multiple questions, improved MindMap data processing, added comprehensive logging, and updated README

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>App Canvas AI</title>
+    <!-- 
+      For production, Tailwind CSS should be installed as a PostCSS plugin.
+      Development CDN usage warning can be ignored for local development.
+    -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
